--- a/memo.css
+++ b/memo.css
@@ -31,7 +31,7 @@ h1{
 
 
 }
-#add-btnz{
+#add-btn{
   padding: 10px 15px;
   background-color: #2ecc71;
   color: white;
@@ -40,6 +40,7 @@ h1{
   cursor: pointer;
   margin-left: 10px;
   font-size: 16px;
+  border-radius:10px;
 }
 #add-btn:hover{
   margin-bottom: #27ae60;
